--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,36 +9,40 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.6",
-    "@mui/x-data-grid": "^8.21.0",
-    "axios": "^1.7.9",
-    "date-fns": "^4.1.0",
-    "gantt-task-react": "^0.3.9",
-    "lucide-react": "^0.556.0",
-    "next": "^16.0.7",
-    "numeral": "^2.0.6",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@mui/material": "7.3.6",
+    "@mui/x-data-grid": "8.21.0",
+    "@reduxjs/toolkit": "2.11.1",
+    "axios": "1.7.9",
+    "date-fns": "4.1.0",
+    "dotenv": "17.2.3",
+    "gantt-task-react": "0.3.9",
+    "lucide-react": "0.556.0",
+    "next": "16.0.7",
+    "numeral": "2.0.6",
     "react": "18.3.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd": "16.0.1",
+    "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.3.1",
-    "recharts": "^3.5.1"
+    "react-redux": "9.2.0",
+    "recharts": "3.5.1",
+    "redux-persist": "6.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20.14.0",
-    "@types/numeral": "^2.0.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
-    "eslint": "^9.13.0",
+    "@types/node": "20.14.0",
+    "@types/numeral": "2.0.5",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/uuid": "10.0.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.13.0",
     "eslint-config-next": "16.0.6",
-    "postcss": "^8.4.40",
-    "prettier": "^3.7.4",
-    "prettier-plugin-tailwindcss": "^0.7.2",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.0.0",
-    "typescript": "^5.6.3"
+    "postcss": "8.4.40",
+    "prettier": "3.7.4",
+    "prettier-plugin-tailwindcss": "0.7.2",
+    "tailwind-merge": "3.4.0",
+    "tailwindcss": "3.4.17",
+    "typescript": "5.6.3"
   }
 }
