--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./"],
+      "@/src/*": ["./src/*"],
+      "@/app/*": ["./app/*"]
     }
   },
   "include": [
